[package]
name = "LiaX"
version = "0.0.1"
edition = "2021"

[profile.release]
overflow-checks = true

[lib]
name = "liblia"
path = "src/lib.rs"

[[bin]]
name = "LiaX"
path = "src/repl.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
